[gd_scene load_steps=2 format=3 uid="uid://rignv00ljcd1"]

[ext_resource type="Script" uid="uid://c4xbskom1c1bm" path="res://Scripts/pause_menu.gd" id="1_hdmo1"]

[node name="pause_menu" type="Control"]
z_index = 2
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = -141.0
offset_top = -66.0
offset_right = 136.0
offset_bottom = 35.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Resume" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="BacktoTitle" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tile Screen"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/BacktoTitle" to="." method="_on_backto_title_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
